add meta folders to all skins

--- a/src/skins/1080/MetrixFHD/Makefile.am
+++ b/src/skins/1080/MetrixFHD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/MetrixFHD
 
-SUBDIRS = buttons buttonsHD colors Default epg extensions fonts icons iconsHD menu mmp skin_default SkinDesign
+SUBDIRS = buttons buttonsHD colors Default epg extensions fonts icons iconsHD menu meta mmp skin_default SkinDesign
 
 dist_install_DATA = *.png *.xml
