--- a/src/skins/1080/ViXBMC_1080/Makefile.am
+++ b/src/skins/1080/ViXBMC_1080/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViXBMC_1080
 
-SUBDIRS = buttons countries crossepg epg extensions fonts icons imdb infobar menuicons networkbrowser pvr screens spinner vixcore
+SUBDIRS = buttons countries crossepg epg extensions fonts icons imdb infobar menuicons meta networkbrowser pvr screens spinner vixcore
 
 dist_install_DATA = *.png *.xml
