--- a/src/skins/1080/YouViX-Purple/Makefile.am
+++ b/src/skins/1080/YouViX-Purple/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/YouViX-Purple
 
-SUBDIRS = buttons countries crossepg epg extensions icons infobar networkbrowser screens selectionbars spinner vixcore
+SUBDIRS = buttons countries crossepg epg extensions icons infobar meta networkbrowser screens selectionbars spinner vixcore
 
 dist_install_DATA = *.png *.xml
