--- a/src/skins/720/Blue-HD/Makefile.am
+++ b/src/skins/720/Blue-HD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Blue-HD
 
-SUBDIRS = buttons countries epg extensions fonts icons infobar ondemand piconbg screens spinner
+SUBDIRS = buttons countries epg extensions fonts icons infobar meta ondemand piconbg screens spinner
 
 dist_install_DATA = *.png *.xml
