--- a/src/skins/720/Magic-HD/Makefile.am
+++ b/src/skins/720/Magic-HD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Magic-HD
 
-SUBDIRS = border buttons dvr epg fonts icons infobar window
+SUBDIRS = border buttons dvr epg fonts icons infobar meta window
 
 dist_install_DATA = *.png *.xml
