--- a/src/skins/1080/NOVUM_FHD_Slim/Makefile.am
+++ b/src/skins/1080/NOVUM_FHD_Slim/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/NOVUM_FHD_Slim
 
-SUBDIRS = busy buttons common_icons countries epg extensions fonts icons images menu mmp skin_default SkinDesign spinner WeatherIcons
+SUBDIRS = busy buttons common_icons countries epg extensions fonts icons images menu meta mmp skin_default SkinDesign spinner WeatherIcons
 
 dist_install_DATA = *.png *.xml
