--- a/src/skins/720/Magic-HD-Noire/Makefile.am
+++ b/src/skins/720/Magic-HD-Noire/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Magic-HD-Noire
 
-SUBDIRS = crossepg epg
+SUBDIRS = crossepg epg meta
 
 dist_install_DATA = *.png *.xml
