--- a/src/skins/720/Magic-SD/Makefile.am
+++ b/src/skins/720/Magic-SD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Magic-SD
 
-SUBDIRS = buttons crossepg dvr epg fonts icons infobar logos piconbg window
+SUBDIRS = buttons crossepg dvr epg fonts icons infobar logos meta piconbg window
 
 dist_install_DATA = *.png *.xml
