--- a/src/skins/720/Red-HD/Makefile.am
+++ b/src/skins/720/Red-HD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Red-HD
 
-SUBDIRS = buttons countries crossepg epg extensions fonts icons infobar ondemand screens selectionbars spinner
+SUBDIRS = buttons countries crossepg epg extensions fonts icons infobar meta ondemand screens selectionbars spinner
 
 dist_install_DATA = *.png *.xml
