--- a/src/skins/720/ViX-Day-HD/Makefile.am
+++ b/src/skins/720/ViX-Day-HD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViX-Day-HD
 
-SUBDIRS = crossepg epg icons infobar menu screens
+SUBDIRS = crossepg epg icons infobar menu meta screens
 
 dist_install_DATA = *.png *.xml
