--- a/src/skins/720/ViX-Night-HD/Makefile.am
+++ b/src/skins/720/ViX-Night-HD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViX-Night-HD
 
-SUBDIRS = crossepg epg icons menu
+SUBDIRS = crossepg epg icons menu meta
 
 dist_install_DATA = *.png *.xml
