--- a/src/skins/720/ViXBMC_Metropolis/Makefile.am
+++ b/src/skins/720/ViXBMC_Metropolis/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViXBMC_Metropolis
 
-SUBDIRS = border busy buttons buttons_old dvr epg fonts icons infobar logos markus625 osd VU window
+SUBDIRS = border busy buttons buttons_old dvr epg fonts icons infobar logos markus625 meta osd VU window
 
 dist_install_DATA = *.png *.xml *.bak
