--- a/src/skins/720/PLi-Full-HD-Night/Makefile.am
+++ b/src/skins/720/PLi-Full-HD-Night/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/PLi-Full-HD-Night
 
-SUBDIRS = border buttons dvr epg icons infobar logos window
+SUBDIRS = border buttons dvr epg icons infobar logos meta window
 
 dist_install_DATA = *.png *.xml *.ttf
