--- a/src/plugins/MyMetrix/skintemplates/Makefile.am
+++ b/src/plugins/MyMetrix/skintemplates/Makefile.am
@@ -1,3 +1,3 @@
 installdir = $(libdir)/enigma2/python/Plugins/Extensions/MyMetrix/skintemplates
 
-dist_install_DATA = *.xml MetrixHD*
+dist_install_DATA = *.xml
