[openvix] try to fix skin builds.

--- a/src/plugins/Novum/Makefile.am
+++ b/src/plugins/Novum/Makefile.am
@@ -1,3 +1,4 @@
 installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/Novum
+install_DATA = README
 rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
 rendererinstall_PYTHON = NovSingleEpgListNobile.py
