[Magic-HD-Night/Noire] rename common folder from MHDC to MHD-Common

--- a/src/skins/720/MHD-Common/Makefile.am
+++ b/src/skins/720/MHD-Common/Makefile.am
@@ -1,4 +1,4 @@
-installdir = $(datadir)/enigma2/MHDC
+installdir = $(datadir)/enigma2/MHD-Common
 
 SUBDIRS = border buttons dvr fonts infobar logos window
 
