[Red-HD] Corrected Makefile.am

--- a/src/skins/1080/Magic-FHD/Makefile.am
+++ b/src/skins/1080/Magic-FHD/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/Magic-FHD
 
-SUBDIRS = border buttons countries crossepg dvr epg fonts icons infobar meta networkbrowser plugins window
+SUBDIRS = border buttons countries crossepg dvr epg fonts icons infobar meta networkbrowser plugins spinner window
 
 dist_install_DATA = *.png *.xml
