[Bello,Confluence] merge some of bello and confluence into the common folder. Skinned QuickSubtitlesConfigMenu properly, now a pop-up menu.

--- a/configure.ac
+++ b/configure.ac
@@ -361,6 +361,8 @@ src/skins/1080/ViXBMC_1080_Bello/vixcore/Makefile
 
 src/skins/1080/ViXBMC_1080_Common/Makefile
 src/skins/1080/ViXBMC_1080_Common/fonts/Makefile
+src/skins/1080/ViXBMC_1080_Common/icons/Makefile
+src/skins/1080/ViXBMC_1080_Common/infobar/Makefile
 src/skins/1080/ViXBMC_1080_Common/yahoo/Makefile
 
 src/skins/1080/ViXBMC_1080_Confluence/Makefile
