[Bello,Confluence] fix makefile

--- a/src/skins/1080/ViXBMC_1080_Common/Makefile.am
+++ b/src/skins/1080/ViXBMC_1080_Common/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViXBMC_1080_Common
 
-SUBDIRS = fonts yahoo
+SUBDIRS = fonts icons infobar yahoo
 
 dist_install_DATA = *.xml
