--- a/src/skins/1080/NOVUM_FHD_Slim/Makefile.am
+++ b/src/skins/1080/NOVUM_FHD_Slim/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/NOVUM_FHD_Slim
 
-SUBDIRS = buttons ccountries epg extensions fonts icons images menu meta mmp SkinDesign spinner WeatherIcons
+SUBDIRS = buttons countries epg extensions fonts icons images menu meta mmp SkinDesign spinner WeatherIcons
 
 dist_install_DATA = *.png *.xml
