add makefiles for iSkin-Light & Dark

--- a/configure.ac
+++ b/configure.ac
@@ -250,6 +250,41 @@ src/skins/1080/Halo/spinner/Makefile
 src/skins/1080/Halo/views/Makefile
 src/skins/1080/Halo/vixcore/Makefile
 
+src/skins/1080/iSkin-Light/Makefile
+src/skins/1080/iSkin-Light/buttons/Makefile
+src/skins/1080/iSkin-Light/crossepg/Makefile
+src/skins/1080/iSkin-Light/epg/Makefile
+src/skins/1080/iSkin-Light/extensions/Makefile
+src/skins/1080/iSkin-Light/icons/Makefile
+src/skins/1080/iSkin-Light/meta/Makefile
+src/skins/1080/iSkin-Light/networkbrowser/Makefile
+src/skins/1080/iSkin-Light/screens/Makefile
+src/skins/1080/iSkin-Light/skin_default/Makefile
+src/skins/1080/iSkin-Light/skin_default/icons/Makefile
+src/skins/1080/iSkin-Light/spinner/Makefile
+src/skins/1080/iSkin-Light/vixcore/Makefile
+
+src/skins/1080/iSkin-Dark/Makefile
+src/skins/1080/iSkin-Dark/buttons/Makefile
+src/skins/1080/iSkin-Dark/crossepg/Makefile
+src/skins/1080/iSkin-Dark/epg/Makefile
+src/skins/1080/iSkin-Dark/extensions/Makefile
+src/skins/1080/iSkin-Dark/icons/Makefile
+src/skins/1080/iSkin-Dark/meta/Makefile
+src/skins/1080/iSkin-Dark/networkbrowser/Makefile
+src/skins/1080/iSkin-Dark/screens/Makefile
+src/skins/1080/iSkin-Dark/skin_default/Makefile
+src/skins/1080/iSkin-Dark/skin_default/icons/Makefile
+src/skins/1080/iSkin-Dark/spinner/Makefile
+src/skins/1080/iSkin-Dark/vixcore/Makefile
+
+src/skins/1080/iSkin-Common/Makefile
+src/skins/1080/iSkin-Common/buttons/Makefile
+src/skins/1080/iSkin-Common/fonts/Makefile
+src/skins/1080/iSkin-Common/icons/Makefile
+src/skins/1080/iSkin-Common/screens/Makefile
+src/skins/1080/iSkin-Common/icons/Makefile
+
 src/skins/1080/Magic-FHD/Makefile
 src/skins/1080/Magic-FHD/border/Makefile
 src/skins/1080/Magic-FHD/crossepg/Makefile
