--- a/src/skins/1080/iSkin-Common/fonts/Makefile.am
+++ b/src/skins/1080/iSkin-Common/fonts/Makefile.am
@@ -1,3 +1,3 @@
-installdir = $(datadir)/enigma2/OSViX/fonts
+installdir = $(datadir)/enigma2/iSkin-Common/fonts
 
-dist_install_DATA = *.ttf
+dist_install_DATA = *.ttf *.otf
