--- a/src/skins/1080/iSkin-Light/Makefile.am
+++ b/src/skins/1080/iSkin-Light/Makefile.am
@@ -1,4 +1,4 @@
-installdir = $(datadir)/enigma2/iSkin
+installdir = $(datadir)/enigma2/iSkin-Light
 SUBDIRS = buttons crossepg epg extensions icons meta networkbrowser screens skin_default spinner vixcore
 
 dist_install_DATA = *.png *.xml
