--- a/src/skins/720/ViXBMC_HD-Slim/Makefile.am
+++ b/src/skins/720/ViXBMC_HD-Slim/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(datadir)/enigma2/ViXBMC_HD-Slim
 
 SUBDIRS = meta
 
-dist_install_DATA = *.png *.txt *.xml *.bak
+dist_install_DATA = *.png *.txt *.xml 
