--- a/src/skins/1080/ViX-Night-1080/Makefile.am
+++ b/src/skins/1080/ViX-Night-1080/Makefile.am
@@ -1,5 +1,5 @@
 installdir = $(datadir)/enigma2/ViX-Night-1080
 
-SUBDIRS = crossepg epg icons menu meta
+SUBDIRS = crossepg epg icons menu meta infobar screens
 
 dist_install_DATA = *.png *.xml
